# HordeEngine

./: .commitlintrc.json  .gitignore  .gitignore.txt  .gitmodules  BuildInsightsHelper.cmd  CMakeLists.txt  CMakeSettings.json  Directory.Build.props  HordeEngine.Local.props  HordeEngine.sln  Make-LuaSharedLib.cmd  README.md  build-and-deploy.ps1  exports.txt  gmsv_hordeengine_win64.vcxproj  gmsv_hordeengine_win64.vcxproj.bak  he_api.cpp  he_api.hpp  hordeengine_client.cpp  hordeengine_min.cpp  hordeengine_module.cpp  hordeengine_server.cpp  lua_shared.def  lua_shared.exports.txt  minimal_only.cpp  module.def  net_shm.cpp  ops-flyover.yml  push.bat
.github/workflows/: build.yml  msbuild-win64.yml  ops-flyover.yml  ops-validate.yml  perfmesh.yml  release.yml  windows-ci.yml
Desktop/HordeEngine_Improvementinator_fixed/: .commitlintrc.json  CMakeLists.txt
Desktop/HordeEngine_Improvementinator_fixed/.github/workflows/: build.yml  release.yml
Desktop/HordeEngine_Improvementinator_fixed/lua/autorun/: he_loader.lua
Desktop/HordeEngine_Improvementinator_fixed/scripts/: install.bat  install.ps1
Desktop/HordeEngine_Improvementinator_fixed/src/core/: he_core.cpp
Desktop/HordeEngine_Improvementinator_fixed/src/server/: module_server.cpp
addon/: README.md  addon.json
addon/lua/autorun/: hordeengine_loader.lua
addon/lua/autorun/client/: hordeengine_client.lua
addon/lua/autorun/server/: hordeengine_server.lua
docs/: PERFMESH_V2_DESIGN.md
experiments/horde_optimizer/: CODEX_TASK.md  install_to_gmod.ps1  pack_addon.ps1
experiments/horde_optimizer/addon/: README.md
experiments/horde_optimizer/addon/lua/autorun/server/: horde_optimizer.lua  horde_optimizer_selftest.lua
experiments/perfmesh/: install_to_gmod.ps1  pack_addon.ps1
experiments/perfmesh/addon/: README.md
experiments/perfmesh/addon/lua/autorun/server/: horde_optimizer_bridge.lua  perfmesh.lua
experiments/perfmesh_bridges/: install_to_gmod.ps1  pack_addon.ps1
experiments/perfmesh_bridges/addon/: README.md
experiments/perfmesh_bridges/addon/lua/autorun/server/: perfmesh_bridges_loader.lua
experiments/perfmesh_bridges/addon/lua/autorun/server/perfmesh_bridges_gen/: bridge_horde_optimizer.lua
experiments/perfmesh_v2/: install_to_gmod.ps1  pack_addon.ps1
experiments/perfmesh_v2/addon/: README.md
experiments/perfmesh_v2/addon/lua/autorun/: perfmesh_shared.lua
experiments/perfmesh_v2/addon/lua/autorun/client/: perfmesh_ui.lua
experiments/perfmesh_v2/addon/lua/autorun/server/: perfmesh_actuators.lua  perfmesh_cmds.lua  perfmesh_config.lua  perfmesh_controller.lua  perfmesh_core.lua  perfmesh_io.lua  perfmesh_policies.lua  perfmesh_presets.lua
experiments/perfmesh_v2/tests/: server_console_snippets.txt
gmsv_hordeengine_win64/src/: he_api.cpp  heprobe_module.cpp  hordeengine.cpp  hordeengine_module.cpp  minimal_only.cpp
lua/autorun/: he_pools.lua
ops/: README.md  comms.json  log.md
ops/locks/: README.md
ops/schemas/: comms.schema.json
scripts/: build.ps1  install_silent.bat
src/client/: module_client.cpp
src/core/: he_core.cpp  he_core.hpp  lua_shim.hpp
src/server/: module_server.cpp
tools/: install_to_gmod.ps1
